# thesis_experiments

./: .gitignore  AGENTS.md  WORK_LOG.md  pyproject.toml
configs/wildfire/: README.md
docs/: architectures_used.typ  data_structure.md  isochrone_model2_gt_commands.md  latent_decoder_worklog.typ  methodology.typ  methodology_model_two.typ  training_run_commands.md  transformer_plan.md
scripts/: export_wandb_runs.py
src/wildfire/data/: dataset.py  decoder_dataset.py  real_data.py
src/wildfire/logging/: wandb_handler.py
src/wildfire/model_latent_decoder/: conditional_unet_01.py  conditional_unet_binary_01.py  conditional_unet_landscape_binary_01.py
src/wildfire/model_latent_predictor/: model_01.py  transformer_01.py  transformer_static_01.py  transformer_static_film_head_01.py  transformer_static_head_01.py
src/wildfire/scripts/: 01_extract_fire_frame_embeddings.py  03_smoke_test_real_dataset.py  04_analyze_landscape_static_features.py  07_render_elevation_heatmap_from_g.py  09_train_latent_lstm.py  10_train_latent_transformer_static.py  11_train_latent_transformer_static_head.py  12_train_latent_transformer_static_film.py  13_train_latent_transformer_residual.py  14_train_latent_transformer_static_film_residual.py  15_train_latent_decoder_conditional_unet.py  16_train_latent_decoder_conditional_unet_binary.py  18_train_latent_decoder_conditional_unet_binary_binarized.py  19_export_latent_predictor_embeddings.py  20_eval_latent_decoder_conditional_unet_binary_predicted.py
tests/wildfire/data/: test_dataset.py  test_dataset_lengths.py  test_decoder_dataset.py  (+2 more)
(+50 files in other folders)
