[project]
name = "thesis-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "real_data: tests requiring real thesis_data files (run on SSH machine)",
]
